Fix overflowing elements upon zoom

--- a/components/header/styles.css
+++ b/components/header/styles.css
@@ -23,16 +23,27 @@ nav,
 .hero {
     margin-left: auto;
     margin-right: auto;
-    width: 1100px;
+    max-width: 1100px;
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: center;
+}
+
+.hero {
+    flex-wrap: wrap;
+}
+
+.hero-image {
+    overflow: hidden;
 }
 
 .hero-left-pane {
+    margin-right: auto;
     width: 460px;
 }
 
 .header-links {
+    margin-left: auto;
     display: flex;
     gap: 20px;
 }
